# kaos-ui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  min-deps.yml  quality.yml  release.yml  scorecard.yml  security-full.yml  security-light.yml  security.yml  templates.yml  test.yml
docs/: DEPLOYMENT.md  INTEGRATION.md  PATTERNS.md  PLAN.md  PRD.md  QUICKSTART.md  RELEASING.md  SAFETY.md  SECURITY.md  TODO.md
docs/design/: chat-turn-lifecycle-redesign.md
docs/standards/: README.md  code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
docs/templates/: spa.md  streamlit.md  textual.md
examples/multi-user-chat/: README.md
examples/multi-user-chat/backend/: pyproject.toml
examples/multi-user-chat/backend/app/: auth.py  tenant_store.py
examples/multi-user-chat/backend/tests/unit/: test_auth.py
examples/single-user-chat/: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Makefile  README.md  docker-compose.postgres.yml  docker-compose.yml  package.json  pnpm-lock.yaml
examples/single-user-chat/apps/spa/: biome.json  index.html  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
examples/single-user-chat/apps/spa/public/: llms.txt  robots.txt
examples/single-user-chat/apps/spa/src/: main.tsx
examples/single-user-chat/apps/spa/tests/: cost-strip.test.tsx  event-handler.reconcile.test.ts  event-handler.replay.test.ts  event-handler.test.ts  file-chips.test.tsx  json-repair.test.ts  model-picker-chip.test.tsx  plan-card.test.tsx  safe-redirect.test.ts  session-list-item.test.tsx  settings-sheet-tool-policy.test.tsx  setup.ts  slash-menu.test.tsx  tool-call-block.test.tsx  tool-policy-badge.test.tsx
examples/single-user-chat/backend/: Dockerfile  pyproject.toml
examples/single-user-chat/backend/app/: _request_ctx.py  auth.py  deps.py  exceptions.py  logging_setup.py  main.py  models.py  settings.py
examples/single-user-chat/backend/app/cli/: audit_aggregate.py  audit_session.py
examples/single-user-chat/backend/app/persistence/: sessions.py
examples/single-user-chat/backend/app/routers/: chat.py  citations.py  feedback.py  files.py  health.py  messages.py  models.py  replay.py  runs.py  vfs.py
examples/single-user-chat/backend/app/services/: agentic_worker.py  baa_gate.py  catalog.py  corpus_search.py  locks.py  persist_turn.py  run_log.py  state_snapshot.py  stream_proxy.py  title.py  tool_call_recorder.py  turn_tool_policy.py  uploads.py  vfs.py
examples/single-user-chat/backend/tests/: conftest.py
examples/single-user-chat/backend/tests/integration/: test_backfill.py  test_chat_agentic_loop.py  test_chat_stream_live.py  test_citations.py  test_corpus_attached_signal.py  test_corpus_search.py  test_history_toolcalls.py  test_no_giveup.py  test_routes_no_llm.py  test_tool_policy_live.py  test_tool_policy_routes.py  test_uploads.py
examples/single-user-chat/backend/tests/unit/: test_agentic_worker.py  test_audit_aggregate_cli.py  test_audit_session_cli.py  test_baa_gate.py  test_catalog.py  test_corpus_markdown_sidecar.py  test_cost_forecast_event.py  test_feedback_endpoint.py  test_health_provider_status.py  test_locks.py  test_logging_context_filter.py  test_messages_rewind.py  test_path_resolver_workaround.py  test_persistence.py  test_replay_endpoint.py  test_run_error_typed.py  test_run_log.py  test_session_policy_wire.py  test_session_store_tenant_scoping.py  test_session_tool_set_migration.py  test_state_snapshot.py  test_stream_proxy.py  test_title_service.py  test_tool_call_recorder.py  test_turn_tool_policy.py  test_uploads_parse_flags.py  test_uploads_tenant_scoping.py  test_usage_recorder_aggregate.py  test_vfs_list_sidecar_filter.py  test_vfs_service.py  test_xlsx_dispatch.py
examples/single-user-chat/docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  PATTERNS.md  PLAN.md  PRD.md  RELEASE-RUNBOOK.md  UPSTREAM-NOTES.md  UX-LANGUAGE.md
examples/single-user-chat/docs/e2e/: smoke.md
examples/single-user-chat/scripts/: audit_session.py  sync-ui.sh
kaos_ui/: __init__.py  __main__.py  agents.py  cli.py  doctor.py  exceptions.py  manifest.py  post_install.py  runtime.py  scaffolder.py  settings.py  uploads.py
kaos_ui/mcp/: __init__.py  tools.py
kaos_ui/templates/dashboard/streamlit/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  app.py.tmpl  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml.tmpl
kaos_ui/templates/module/: .gitignore  CLAUDE.md  README.md  pyproject.toml.tmpl
kaos_ui/templates/module/tests/: conftest.py.tmpl
kaos_ui/templates/module/{{KAOS_PYTHON_MODULE}}/: __init__.py.tmpl  __main__.py.tmpl  _version.py.tmpl  cli.py.tmpl  serve.py.tmpl  tools.py.tmpl
kaos_ui/templates/tui/textual/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml.tmpl
kaos_ui/templates/web/api/: .gitignore  CLAUDE.md  README.md  pyproject.toml.tmpl
kaos_ui/templates/web/spa/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.postgres.yml  docker-compose.yml  package.json  pnpm-workspace.yaml
kaos_ui/templates/workflow/: README.md  main.py.tmpl  pyproject.toml.tmpl
tests/: conftest.py
tests/integration/: test_scaffold_api.py  test_scaffold_module.py  test_scaffold_spa.py  test_scaffold_streamlit.py  test_scaffold_textual.py  test_scaffold_workflow.py  test_template_compiles.py
tests/unit/: test_agents_helpers.py  test_cli.py  test_doctor.py  test_manifest.py  test_mcp_tools.py  test_post_install_chained.py  test_readme_drift_pins.py  test_scaffolder.py  test_scaffolder_settings.py  test_settings.py  test_uploads.py  test_worker_prompt_budget.py
(+163 files in other folders)
