[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "single-user-chat-backend"
version = "0.1.0"
description = "Single-User Chat — backend (mounts kaos_agents.api.server.create_app + extension layer)"
readme = "../README.md"
requires-python = ">=3.13,<3.15"
license = { text = "LicenseRef-Proprietary" }

dependencies = [
    # AgenticLoop wire-up release coordination (2026-05-16): the
    # AgenticLoop + SessionPolicy + GoalChecker primitives shipped
    # in kaos-agents 0.1.0a4. The 5 PR-1 catalog-expansion floors
    # ship the per-tool tags (`forensics`, `browser`, `netinfra`,
    # `retrieval`) that the derive_group classifier reads. kaos-ui
    # 0.1.0a2 ships TR-1 / P1-5, so the local-path override is
    # dropped — every kaos-* dep now resolves to PyPI.
    "kaos-agents>=0.1.0a4,<0.2",
    "kaos-core>=0.1.0a7,<0.2",
    "kaos-ui>=0.1.0a2,<0.2",
    # NOT transitive from kaos-agents — declare explicitly.
    "kaos-llm-core>=0.1.0a9,<0.2",
    "kaos-llm-client>=0.1.0a3,<0.2",
    # Optional content/extraction tools — only invoked when a session
    # has tools_enabled=True. kaos_ui.agents.build_chat_runtime
    # registers these conditionally via contextlib.suppress(ImportError).
    "kaos-content[markdown]>=0.1.0a7,<0.2",
    "kaos-pdf>=0.1.0a4,<0.2",
    "kaos-office>=0.1.0a4,<0.2",
    # P2-1: legal citation extraction (60 typed Bluebook + financial + accounting kinds).
    "kaos-citations>=0.1.0a2,<0.2",
    # P2-1b: source discovery + materialization. Federal Register / eCFR /
    # EDGAR / GovInfo / GLEIF connectors + generic HTTP / archive / file
    # parsers. 30 tools; offline parsers carry tags=["forensics"] for
    # the SessionPolicy derivation.
    "kaos-source>=0.1.0a6,<0.2",
    # P2-1c: web fetch + browser (Playwright) + netinfra (DNS / WHOIS /
    # TLS / TCP / UDP). 45 tools; browser tagged ["browser"], netinfra
    # tagged ["netinfra"] for the SessionPolicy derivation.
    "kaos-web>=0.1.0a4,<0.2",
    # P2-1d: kaos-nlp-core content_type classifier — magic-byte
    # detection feeds the AgenticLoop's corpus_kinds Signature input.
    "kaos-nlp-core>=0.1.0a7,<0.2",
    # FastAPI + SSE + multipart (UploadFile needs python-multipart)
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sse-starlette>=2.1,<3",
    "python-multipart>=0.0.20,<1",
    # Settings + validation
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.8,<3",
    # ULID for session ids (client-side too, see frontend deps)
    "ulid-py>=1.1,<2",
    # HTTP proxy to kaos-agents' /v1/sessions/{id}/messages
    "httpx>=0.28,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.26,<2",
    "pytest-cov>=6.0,<8",
    "ruff>=0.11,<2",
    "ty>=0.0.1a17",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# All kaos-* deps resolve to PyPI as of 2026-05-16. The previous
# kaos-ui local-path override was dropped after kaos-ui 0.1.0a2 + the
# AgenticLoop wire-up (kaos-agents 0.1.0a4) shipped.
# [tool.uv.sources]
# (intentionally empty — re-introduce only for short-lived dev pins
# against a local checkout, never on main.)

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-branch",
    "--cov-report=term-missing",
]
markers = [
    "live: requires a live LLM API key (e.g. ANTHROPIC_API_KEY)",
    "integration: end-to-end HTTP behavior checks via TestClient",
    "unit: focused unit checks",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH", "S"]
# S104 binding-to-0.0.0.0 (uvicorn dev), S105/S106/S107 false positives
# on the long test token literal, S110/S112 swallowed exceptions
# (intentional best-effort cleanup paths).
ignore = ["S104", "S105", "S106", "S107", "S110", "S112"]

[tool.ruff.lint.per-file-ignores]
# pytest `assert` is the API, not a bug.
"tests/**/*.py" = ["S101"]

[tool.coverage.run]
source = ["app"]
branch = true
