[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "single-user-chat-backend"
version = "0.1.0"
description = "Single-User Chat — backend (mounts kaos_agents.api.server.create_app + extension layer)"
readme = "../README.md"
requires-python = ">=3.13,<3.15"
license = { text = "LicenseRef-Proprietary" }

dependencies = [
    # AgenticLoop wire-up release coordination (2026-05-16): the
    # AgenticLoop + SessionPolicy + GoalChecker primitives shipped
    # in kaos-agents 0.1.0a4. The 5 PR-1 catalog-expansion floors
    # ship the per-tool tags (`forensics`, `browser`, `netinfra`,
    # `retrieval`) that the derive_group classifier reads. kaos-ui
    # 0.1.0a2 ships TR-1 / P1-5, so the local-path override is
    # dropped — every kaos-* dep now resolves to PyPI.
    # 0.1.0a5 (2026-05-16) drops the ChatCodec override in
    # BaseAgent._simple_respond — fixes the `[/response]` /
    # `</response>` scratchpad-tag leak users saw on Haiku 4.5.
    # 0.1.0a7 (2026-05-17) ships the plan-execute partial-findings
    # synthesis branch (PR #28), the working decompose replan loop
    # (PR #30), and the IntentSignature corpus_attached signal
    # (PR #29). The SPA's UX-C2 multi-turn corpus regression and the
    # long-horizon plan "stopped: needs_replan" UX gap both close at
    # this floor. 0.1.0a8 (2026-05-17) adds the Windows VFS session-
    # id path-encoding fix (PR #32) — irrelevant for the SPA's
    # Linux/macOS surface but kept in scope so CI parity with the
    # kaos-agents Windows job holds. 0.1.0a9 (2026-05-17) bundles
    # five wishlist PRs: DEEPEN dead-code removal (#34), LLM-based
    # plan-execute synthesis (#35), Span(JUDGE)+Span(ROUTE)
    # observability events (#36), confidence-gated soft-miss CONTINUE
    # (#37 — judge's matched=False with low confidence no longer
    # kills plans), and conditional plan steps via Step.abort_if /
    # Step.pivot_to (#38). Combined, these are the closing pieces of
    # the R1-REAL v2 matrix recovery — plan-execute now surfaces
    # fluent narratives instead of JSON dumps, doesn't bail on fussy
    # judge verdicts, and emits live span events for the SPA run
    # inspector to render judge/route decisions.
    # 2026-05-17: bumped to 0.1.0a11 — picks up Improvement #1
    # (PatternMismatch event delivery fix). 0.1.0a10 shipped the
    # dispatch redirect (ChatAgent + PLAN intent → real ReAct + tools
    # instead of fabricated training-data answer) but its diagnostic
    # PatternMismatch typed event was never yielded to SSE consumers
    # because emitter.emit() pushed to a collector but the dispatcher
    # discarded the return. 0.1.0a11 returns (handler, event) from
    # _detect_pattern_mismatch and yields the event explicitly. SPA
    # run inspector can now show the redirect.
    # 2026-05-17 (E2E goal): bumped to 0.1.0a12 — Stage B4 (partial)
    # of the no-hardcoded-caps-and-artifact-first-tool-results plan.
    # Promotes result_summary_max_chars / eval_result_max_chars /
    # rerank_passage_max_chars to env-overridable KaosAgentSettings
    # fields (KAOS_AGENT_*). No behavior change at default values.
    # 2026-05-19: bumped kaos-agents floor to 0.1.0a16 — adds the
    # verify-before-answer policy: IntentSignature rules 8/9
    # (factual-entity bias + clarification-loop ceiling),
    # GoalCheckSignature critic rules (claimed-fetch fabrication,
    # factual-entity-no-tool-call, clarification-loop, announce-
    # and-quit), plus the tool_bridge ToolReportedError switch that
    # propagates is_error=true through ReAct.
    # 2026-05-21: bumped floor to 0.1.2 — reliability roadmap layer 2
    # (R0.1 worker-draft preservation, R1.1 SSE-dict circuit breaker,
    # R1.2 M2/M3 override rationale, R1.3 per-iteration tool-call cap,
    # R1.4 semantic stuck-detection). 2026-05-21 bump to 0.1.7 — the
    # broad-reliability roadmap (2026-05-22) closure: B0.2 chat-ReAct
    # tool timeout, B0.3 canonical-turn summarize, B0.7 PII scrubber,
    # B0.8 citation verification (CourtListener), B0.9 injection
    # envelope hoist. See
    # kaos-modules/docs/plans/2026-05-22-broad-reliability-adaptability-roadmap.md.
    # 2026-05-22: bumped kaos-agents floor to 0.1.11 — CVE patch
    # release on top of the launch-blocker stack (idna 3.15 closes
    # CVE-2026-45409; starlette 1.0.1 closes PYSEC-2026-161). No
    # functional code change vs 0.1.10. 0.1.10 carried the launch-
    # blocker plan §Issues 1+2+5+6+8+9 stack (matter_id, Runner-
    # default CircuitBreaker, ordinal coref, staleness gate, D3 URL
    # scrubber, per-tool cost cap; PR #69).
    # 2026-05-23: bumped floor to 0.1.14 — create_app(context_factory=...)
    # threads the per-session ``KaosContext`` factory through to every
    # per-request Runner the FastAPI handlers construct. Removes the
    # last app/main.py monkey-patch on ``Runner.__init__`` —
    # ``create_agent_app(runtime=runtime, context_factory=_spa_context_factory(runtime))``
    # is now the supported public path.
    # 2026-05-24: bumped floor to 0.1.15 — Playwright-default citation
    # verifier (task #634). ``kaos_agents.citations.verifier`` now routes
    # CourtListener lookups through kaos-web's BrowserClient when
    # [browser] is installed (the SPA pins [browser] below). Opt-out via
    # KAOS_AGENT_CITATION_VERIFIER_USE_BROWSER=0.
    # 2026-05-24: bumped floor to 0.1.16 — corpus-stress P0 fixes
    # (kaos-modules/docs/plans/2026-05-24-corpus-stress-suite-followup.md):
    # (P0.2) ToolFitnessSignature gains a scale-aware ``corpus_size: int``
    # input so the M1 ranker prefers corpus aggregators
    # (kaos-agent-findings / kaos-agent-corpus-filter /
    # kaos-content-search-document) over per-doc parsers when the deal
    # room has >=20 documents; (P0.3) new
    # ``KaosAgentSettings.chat_max_cost_usd: float | None = None`` cost
    # cap with env override ``KAOS_AGENT_CHAT_MAX_COST_USD`` — typed
    # BudgetExceeded(kind="chat_cost") + refusal TextDelta on cap
    # exceeded (mirrors plan_max_cost_usd for the ChatAgent path);
    # (P0.4) new M4 silent-incompleteness critic
    # (``kaos_agents.planning.m4_completeness`` + new
    # ``KaosAgentSettings.m4_completeness_model: str | None = None`` with
    # env override ``KAOS_AGENT_M4_COMPLETENESS_MODEL``) composes the
    # generic JudgeSignature with a COMPLETENESS rubric; fires after
    # M3 grounding inside AgenticLoop. All three default to safe-no-
    # behavior-change values — existing SPA backend sessions see no
    # change unless the operator opts in via env.
    # 2026-05-26: bumped floor to 0.1.21 — adds the OCR fallback in
    # _build_corpus_view_from_documents (corpus-stress S03 cascade
    # closure). FindingsAgent's eager pre-parse on a scanned PDF now
    # falls through to Tesseract when parse_pdf_bytes returns empty
    # body, recovering text so the agent can ground rather than emit
    # "(empty)". Requires kaos-pdf[ocr]>=0.1.4 (pytesseract) to
    # activate — see the kaos-pdf line below.
    # 2026-05-26: bumped floor to 0.1.22 — WI3 quantified-ratio
    # refusal wording in evaluate_no_evidence_gate. No behavior change
    # for sessions that don't hit the gate; surfaces honest "0 of N"
    # denominators to operators when it does fire.
    "kaos-agents>=0.1.22,<0.2",
    # 2026-05-18: bumped kaos-core floor to 0.1.0a10 — adds
    # KaosContext.default_vfs_namespace, which the SPA monkey-patch in
    # app/main.py:64-96 requires to route bare-name tool inputs to the
    # session VFS prefix. Without this floor the monkey-patch silent-
    # skips the kwarg (see sessions 01KRXPNQ0X0AXQGE7JYBM8E3Y1 and
    # 01KRXQ46675V6X19C6V3X5YX7M — both shipped "Unable to determine"
    # because kaos-core 0.1.0a8 was still installed despite a stale
    # wheel claim of 0.1.0a11). Earlier comment about a8 + Stage A
    # artifact features superseded — those landed in a8 and remain
    # available in a10+.
    # 2026-05-22: bumped floor to 0.1.1 — Issue 7 / #582 path_resolver
    # idempotency fix. SPA monkey-patch in app/main.py can be removed
    # at the next refactor.
    "kaos-core>=0.1.1,<0.2",
    "kaos-ui>=0.1.0a13,<0.2",
    # 2026-05-18: bumped kaos-llm-core floor to 0.1.0a15 — adds the
    # single-field Signature auto-unwrap that lets `@llm_call(... -> str)`
    # return a real `str` instead of `SignatureOutput` (the cause of
    # the `'SignatureOutput' has no attribute 'strip'` titler crash
    # at /home/mjbommar/projects/273v/kaos-modules/docs/plans/
    # persona-matrix-followups.md § 5 Stage 2).
    "kaos-llm-core>=0.1.0,<0.2",
    # 2026-05-21: bumped floor to 0.1.1 — reliability roadmap R0.3
    # (Gemini tool-dispatch fix: JSON-schema transformer applied to
    # tool parameter blocks, not just structured-output responseSchema).
    # 2026-05-22: bumped to 0.1.5 — Issues 3 (model_snapshot) + 4
    # (vendor_egress + BAA flag + KaosLLMProviderPolicyError).
    # (0.1.3/0.1.4 broken release commits skipped.)
    "kaos-llm-client>=0.1.5,<0.2",
    # 2026-05-18: kaos-content >= a12 / kaos-pdf >= a7 / kaos-office
    # >= a7 — all carry the Stage 1 `path` field on snippet tool
    # results (per persona-matrix-followups.md). kaos-office a7
    # ships the numbering-label resolution port from kelvin-office
    # (legacy walked Word's numbering.xml + running counters to emit
    # `"11. GOVERNING LAW. ..."`; pre-a7 kaos-office stripped the
    # visible numeral — the cause of the NDA matrix section-number
    # fabrication P0). kaos-content a12 ships the corresponding
    # DocumentView numbering-label preservation; kaos-pdf a7 ships
    # the structural-breadcrumbs path field on search-document hits.
    "kaos-content[markdown]>=0.1.0,<0.2",
    # 2026-05-26: bumped to 0.1.4 + [ocr] extra. 0.1.4 ships the
    # kaos-pdf-ocr-page MCP tool (Tesseract single-page OCR); the
    # [ocr] extra pulls pytesseract so kaos-agents 0.1.21+'s OCR
    # fallback in _build_corpus_view_from_documents can activate on
    # scanned PDFs uploaded through the SPA (corpus-stress S03).
    # System tesseract binary still required on host — see
    # README install notes.
    "kaos-pdf[ocr]>=0.1.4,<0.2",
    "kaos-office>=0.1.0,<0.2",
    # P2-1: legal citation extraction (60 typed Bluebook + financial + accounting kinds).
    "kaos-citations>=0.1.0,<0.2",
    # P2-1b: source discovery + materialization. Federal Register / eCFR /
    # EDGAR / GovInfo / GLEIF connectors + generic HTTP / archive / file
    # parsers. 30 tools; offline parsers carry tags=["forensics"] for
    # the SessionPolicy derivation.
    # 2026-05-17 (Stage B2): bumped to 0.1.0a7 — FRGetContent + ECFRContent
    # migrated off max_chars=50_000 truncation to ArtifactStore.create_from_bytes.
    # Full bodies now addressable via structured_content.artifact_id.
    # 2026-05-18: bumped to 0.1.0a9 — VFS-FIX Stage 4 (path-resolution
    # helper + SES2 fetch-url remediation hint) now on PyPI.
    # 2026-05-24: bumped to >=0.1.2 — kaos-source-fetch-url now defaults
    # to Playwright (task #634) so the agent surface is uniform with
    # kaos-web's fetch tools. use_browser=None auto-detects [browser];
    # explicit False opts back into bare httpx for known-clean hosts.
    "kaos-source>=0.1.2,<0.2",
    # P2-1c: web fetch + browser (Playwright) + netinfra (DNS / WHOIS /
    # TLS / TCP / UDP). 45 tools; browser tagged ["browser"], netinfra
    # tagged ["netinfra"] for the SessionPolicy derivation.
    # 2026-05-17 (Stage B3): bumped to 0.1.0a5 — crawl_tools fallback no
    # longer silently truncates at 5000 chars; full body returned (or
    # routed via artifact tier when runtime context available).
    # 2026-05-22: ``[browser]`` extra pinned — Playwright is now the
    # DEFAULT _fetch_html path on kaos-web ≥ 0.1.3 (anti-bot stack
    # ported from kelvin-legal-intelligence). Without [browser] the
    # SPA falls back to bare httpx and SEC.gov / Cloudflare / etc.
    # silently 403 the agent. Deploy must run
    # ``uv run playwright install chromium`` once after sync.
    # 2026-05-24: bump to >=0.1.8 — the MCP tool schemas now default
    # use_browser=None (auto-picks Playwright) AND _fetch_html sniffs
    # response bodies for anti-bot interstitial fingerprints (FR /
    # eCFR "Request Access", Cloudflare, datadome, Akamai, PerimeterX)
    # and auto-retries on Playwright. Closes the silent-200 fabrication
    # path observed on 2026-05-23 FR climate-disclosure session.
    # 2026-05-24: bump to >=0.1.9 — Playwright-default contract extended
    # to the 3 crawl/discovery MCP tools (kaos-web-discover-urls,
    # kaos-web-batch-fetch, kaos-web-crawl-site) AND the public
    # batch_fetch() / crawl_site() Python API. Completes the
    # kaos-web side of task #634.
    "kaos-web[browser]>=0.1.9,<0.2",
    # P2-1d: kaos-nlp-core content_type classifier — magic-byte
    # detection feeds the AgenticLoop's corpus_kinds Signature input.
    "kaos-nlp-core>=0.1.0,<0.2",
    # FastAPI + SSE + multipart (UploadFile needs python-multipart)
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sse-starlette>=2.1,<3",
    "python-multipart>=0.0.20,<1",
    # Settings + validation
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.8,<3",
    # ULID for session ids (client-side too, see frontend deps)
    "ulid-py>=1.1,<2",
    # HTTP proxy to kaos-agents' /v1/sessions/{id}/messages
    "httpx>=0.28,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.26,<2",
    "pytest-cov>=6.0,<8",
    "ruff>=0.11,<2",
    "ty>=0.0.1a17",
]

[project.scripts]
# Plan Issue 6 — postmortem CLI for debugging "yesterday's turn."
# Referenced in app/services/tool_call_recorder.py and app/routers/chat.py
# but had no implementation anywhere in the monorepo until 2026-05-22.
kaos-audit-session = "app.cli.audit_session:main"
# Plan Issue 5 — durable JSONL audit log via daily aggregation across
# all sessions. Reads the per-session runs/turn-*.jsonl event streams
# the SPA already writes; produces one JSONL line per completed turn.
kaos-audit-aggregate = "app.cli.audit_aggregate:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
# Local editable install for kaos-ui so changes to
# `kaos_ui.agents.augment_instructions` (system-prompt composition,
# date preamble, search-before-answer rule) reach the running
# backend without a publish cycle. This package is the parent of
# this example; the editable override is the canonical dev loop.
kaos-ui = { path = "../../../", editable = true }
# 2026-05-18: kaos-core 0.1.0a10, kaos-content 0.1.0a12, kaos-pdf
# 0.1.0a7, kaos-office 0.1.0a7, kaos-agents 0.1.0a15, kaos-llm-core
# 0.1.0a15 and kaos-source 0.1.0a9 all reached PyPI — editable
# overrides removed. All kaos-* dependencies now resolve to their
# published wheels.

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-branch",
    "--cov-report=term-missing",
]
markers = [
    "live: requires a live LLM API key (e.g. ANTHROPIC_API_KEY)",
    "integration: end-to-end HTTP behavior checks via TestClient",
    "unit: focused unit checks",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH", "S"]
# S104 binding-to-0.0.0.0 (uvicorn dev), S105/S106/S107 false positives
# on the long test token literal, S110/S112 swallowed exceptions
# (intentional best-effort cleanup paths).
ignore = ["S104", "S105", "S106", "S107", "S110", "S112"]

[tool.ruff.lint.per-file-ignores]
# pytest `assert` is the API, not a bug.
"tests/**/*.py" = ["S101"]

[tool.coverage.run]
source = ["app"]
branch = true
